# FIAP_TechChallenge4_Prediction

./: .gitignore  README.md  docker-compose.yml
.github/instructions/: dev_and_prod_setup.instructions.md
.github/workflows/: README.md  ci-cd.yml  deploy-backend.yml  deploy-frontend.yml  deploy-infrastructure.yml  destroy.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  train_lstm.py
backend/api/routers/: logs.py  markets.py  monitor.py  predict.py  quotes.py  train_model.py  trained_models.py
backend/ml_models/ALPA3.SA/: model.pt  scaler.pkl
backend/ml_models/BA/: model.pt  scaler.pkl
backend/ml_models/DIS/: model.pt  scaler.pkl
backend/ml_models/GM/: model.pt  scaler.pkl
backend/ml_models/MGLU3.SA/: model.pt  scaler.pkl
backend/ml_models/PETR4.SA/: model.pt  scaler.pkl
backend/ml_models/TOTS3.SA/: model.pt  scaler.pkl
backend/schemas/: predict.py  train_model.py
backend/services/: lstm_service.py  stock_provider.py
backend/static/: index.html
backend/static/assets/: index-Cwwtptmr.css  index-QqKBsOEb.js
backend/utils/: monitor.py
environment/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: Prediction.jsx  QuoteResult.jsx
