[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Miler",email = "estudos.miler@gmail.com"}
]
readme = ""
requires-python = ">=3.12, <3.15"
dependencies = [
    "fastapi[standard] (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "investpy (>=1.0.8,<2.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "setuptools (<81)",
    "psutil (>=7.1.3,<8.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
